# fusion_client

./: .gitignore  Makefile  README.md  build_test_roadmap.md  instructions.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
fusion_client/: __init__.py  py.typed
fusion_client/config/: __init__.py  endpoints.py  settings.py
fusion_client/core/: __init__.py  auth.py  client.py  exceptions.py  http.py
fusion_client/models/: __init__.py  agent.py  base.py  chat.py  file.py  user.py
fusion_client/services/: __init__.py
fusion_client/utils/: __init__.py  cache.py  retry.py  streaming.py  validators.py
scripts/: run_tests.py
tests/: conftest.py  test_examples.py
tests/fixtures/: api_responses.json  test_data.py
tests/integration/: test_api_integration.py  test_crewai_integration.py  test_langchain_integration.py
tests/testing/: __init__.py  mock_server.py
tests/unit/: test_client.py  test_models.py  test_services.py  test_utils.py
